--- a/src/components/cards/date/date_card.scss
+++ b/src/components/cards/date/date_card.scss
@@ -14,22 +14,21 @@
         @include form_style;
         font-size: 24px;
         line-height: 29px;
-        margin: 0;
     } 
 }
-.date_card_form{
-    padding-top: 21px;;
+.date_card_form {
+    padding-top: 21px;
+}
+.date_input {
     display: flex;
     flex-direction: row;
-    gap: 20px;
 }
-.enter_date_input, .output_date_input, .guests_form {
-    float: left;
+.guests_input {
+    @include form_style;
+    float: none;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
-}
-.guests_form {
-    padding-top: 20px;
 }
 .date_card_button {
     text-align: center;
