--- a/src/pages/landing_page.pug
+++ b/src/pages/landing_page.pug
@@ -9,3 +9,4 @@ html(lang="ru")
             include ../../dist/main.css
     body 
         include ../components/cards/date/date_card
+        include ../components/cards/checkout/checkout_card
