add form elements

--- a/src/components/form_elements/dropdown/dropdown.pug
+++ b/src/components/form_elements/dropdown/dropdown.pug
@@ -1,2 +1,4 @@
-label(for="") 
-    input(type="text")
+mixin dropdown(dropdown_label, dropdown_placeholder)
+  .dropdown_label_input  
+    label.dropdown_label(for="")= dropdown_label
+    input.dropdown_input(type="select" placeholder= dropdown_placeholder)
