add date dropdown

--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -12,3 +12,5 @@ html(lang="en")
         +dropdown("DROPDOWN", "Сколько гостей")
         include ../components/form_elements/masked_text_field/masked_text_field.pug
         +masked_txt_field("MASKED TEXT FIELD", "ДД. ММ. ГГ.")
+        include ../components/form_elements/date_dropdown/date_dropdown.pug
+        +date_dropdown("DATE DROPDOWN", "DATE DROPDOWN")
