--- a/src/components/form_elements/date_dropdown/date_dropdown.pug
+++ b/src/components/form_elements/date_dropdown/date_dropdown.pug
@@ -5,4 +5,4 @@ mixin date_dropdown(enter_label, outgo_label)
       input.datepicker-here.date_dropdown_input(type="text", name="")
     .output_date_dropdown
       label.date_form_label(for="outgo")= outgo_label
-      input.date_dropdown_input(type="text", name="")
+      input.datepicker-here.date_dropdown_input(type="text", name="")
