--- a/src/components/form_elements/buttons/buttons.pug
+++ b/src/components/form_elements/buttons/buttons.pug
@@ -1,3 +1,3 @@
 mixin button(button_text, type)
-        button.button_ #{"type"} (@click.prevent="onClick")
+        button.button(class = type + "_button")(@click.prevent="onClick")
             p=button_text
