--- a/src/components/form_elements/buttons/buttons.scss
+++ b/src/components/form_elements/buttons/buttons.scss
@@ -1,16 +1,39 @@
-.date_card_button {
+@mixin button {
     text-align: center;
-    height: 44px;
-    width: 320px;
-    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    height: 44px; 
     border-radius: 22px;
-    border: none;
-    margin-top: 30.44px;
     > p {
         font-family: 'Montserrat' sans-serif;
         font-size: 12px;
-        color: #ffffff;
         font-weight: 700;
         margin: 0;
+    } 
+}
+@mixin bg_button {
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    border: none;
+    > p {
+        color: #ffffff;
     }
+    
+}
+.full_button {
+    @include button();
+    @include bg_button();
+    width: 320px;
+}
+.bg_button {
+    @include button();
+    @include bg_button();
+    width: 99px;
+}
+.bg_button:hover {
+    opacity: 0.5;
+}
+.no_bg_button {
+    @include button();
+    background:#ffffff;
+    width: 99px;
+    color: #BC9CFF;
+    background: -moz-linear-gradient(left, #503b9a 20%, #269cc1 80%);
 }
