--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -6,9 +6,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         style 
-            include ../../bower_components/air-datepicker/dist/css/datepicker.min.css
+            include ../../node_modules/air-datepicker/dist/css/datepicker.min.css
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-        script(src='../../bower_components/air-datepicker/dist/js/datepicker.min.js')
+        script(src='../../node_modules/air-datepicker/dist/js/datepicker.min.js')
     body 
         form(action="") 
             include ../components/form_elements/txt_field/txt_field.pug
@@ -20,4 +20,6 @@ html(lang="en")
             include ../components/form_elements/date_dropdown/date_dropdown.pug
             +date_dropdown("DATE DROPDOWN", "DATE DROPDOWN")
             include ../components/form_elements/buttons/buttons.pug
-            +button("CLICK ME", "check")
+            +button("CLICK ME", "full")
+            +button("CLICK ME", "bg")
+            +button("CLICK ME", "no_bg")
