need to change no bg button

--- a/src/components/form_elements/buttons/buttons.scss
+++ b/src/components/form_elements/buttons/buttons.scss
@@ -35,5 +35,5 @@
     background:#ffffff;
     width: 99px;
     color: #BC9CFF;
-    background: -moz-linear-gradient(left, #503b9a 20%, #269cc1 80%);
+    border-color: -internal-light-dark(red, blue);
 }
