--- a/src/components/form_elements/buttons/buttons.pug
+++ b/src/components/form_elements/buttons/buttons.pug
@@ -1,3 +1,9 @@
+- var arrowImg = require ('svg-inline-loader?classPrefix!../components/form_elements/buttons/img/arrow.svg')
 mixin button(button_text, type)
         button.button(class = type + "_button")(@click.prevent="onClick")
             p=button_text
+            if type == "full"
+                svg
+                    use(xlink:href='../components/form_elements/buttons/img/arrow.svg')
+            else 
+                p hey
