--- a/src/components/form_elements/date_dropdown/calendar.scss
+++ b/src/components/form_elements/date_dropdown/calendar.scss
@@ -12,11 +12,14 @@
     font-weight: bold;
 }
 .datepicker--cell-day {
-    font-family: 'Montsserat' sans serif !important;
+    font-family: 'Montserrat' sans-serif;
     font-size: 12px;
     color: #1F2041;
     opacity: 50%;
     > .-other-month- {
         opacity: 25%;
     }
+}
+.datepicker--content {
+    padding-top: 30px;
 }
