--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -23,3 +23,6 @@ html(lang="en")
             +button("CLICK ME", "full")
             +button("CLICK ME", "bg")
             +button("CLICK ME", "no_bg")
+            include ../components/form_elements/checkbox/checkbox.pug
+            +checkbox("Можно курить") 
+
