--- a/src/components/form_elements/checkbox/checkbox.pug
+++ b/src/components/form_elements/checkbox/checkbox.pug
@@ -1,4 +1,4 @@
-mixin checkbox (checkbox_txt)
+mixin checkbox (checkbox_txt, type)
   .checkbox
-    input.checkbox_input(type="checkbox")
-    label.checkbox_label= checkbox_txt
+    input.checkbox_input(type="checkbox" id="smoke")
+    label.checkbox_label(for="smoke")= checkbox_txt
