--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -24,5 +24,5 @@ html(lang="en")
             +button("CLICK ME", "bg")
             +button("CLICK ME", "no_bg")
             include ../components/form_elements/checkbox/checkbox.pug
-            +checkbox("Можно курить") 
+            +checkbox("Можно курить", "smoking") 
 
