--- a/src/components/form_elements/checkbox/checkbox.pug
+++ b/src/components/form_elements/checkbox/checkbox.pug
@@ -2,3 +2,6 @@ mixin checkbox (checkbox_txt, type)
   .checkbox
     input.checkbox_input(type="checkbox" id="smoke")
     label.checkbox_label(for="smoke")= checkbox_txt
+    //- img(src=require("../components/form_elements/checkbox/img/check_mark.svg"))
+    img(src=require("/src/components/form_elements/checkbox/img/check_mark.svg"), width="100" height="90" )
+    img(src="/src/components/form_elements/checkbox/img/Gold.svg", width="100" height="90" )
