add copy plugin

--- a/src/components/form_elements/checkbox/checkbox.scss
+++ b/src/components/form_elements/checkbox/checkbox.scss
@@ -25,8 +25,8 @@
     border: 1px solid #BC9CFF;
     height: 20px;
     width: 20px;
-    background-image: url(/src/components/form_elements/checkbox/img/check_mark.svg);
-    background-size: 100%;
+    background-image: url("img/check_mark.svg");
+    background-size: 50%;
     opacity: 1;
 }
 
