--- a/src/components/form_elements/buttons/buttons.pug
+++ b/src/components/form_elements/buttons/buttons.pug
@@ -1,4 +1,4 @@
-- var arrowImg = require ('svg-inline-loader?classPrefix!../components/form_elements/buttons/img/arrow.svg')
+//- var arrowImg = require ('svg-inline-loader?classPrefix!../components/form_elements/buttons/img/arrow.svg')
 mixin button(button_text, type)
         button.button(class = type + "_button")(@click.prevent="onClick")
             p=button_text
