--- a/src/components/form_elements/checkbox/checkbox.scss
+++ b/src/components/form_elements/checkbox/checkbox.scss
@@ -25,7 +25,7 @@
     border: 1px solid #BC9CFF;
     height: 20px;
     width: 20px;
-    //background-image: url(imageToUse);
+    background-image: url("check_mark.svg");
     background-size: 50%;
     opacity: 1;
 }
