--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -25,4 +25,9 @@ html(lang="en")
             +button("CLICK ME", "no_bg")
             include ../components/form_elements/checkbox/checkbox.pug
             +checkbox("Можно курить", "smoking") 
+            include ../components/form_elements/radio_button/radio_button.pug
+            form
+                +radio_button("woman", "Женщина")
+                +radio_button("male", "Мужчина")
+
 
