--- a/src/components/form_elements/checkbox/checkbox.scss
+++ b/src/components/form_elements/checkbox/checkbox.scss
@@ -1,3 +1,9 @@
+@mixin label {
+    font-family: 'Montserrat' sans-serif;
+    font-size: 14px;
+    border-color: #1f2041;
+    opacity: 50%;
+}
 .checkbox {
     display: flex;
     flex-direction: row;
@@ -7,18 +13,16 @@
 .checkbox_input {
     display: none;
 }
-.checkbox_label {
-    padding-left: 10px;
-}
 .checkbox_label::before {
     content: '';
-    display: inline-block;
+    display: inline-flex;
     width: 20px;
     height: 20px;
     border: 3px solid #1f2041;;
     border-radius: 3px;
     border-width: 1px;
     opacity: 25%;
+    margin-right: 10px;
 }
 .checkbox_input:checked  + .checkbox_label::before {
     content: '';
@@ -26,14 +30,14 @@
     height: 20px;
     width: 20px;
     background-image: url("~check_mark.svg");
-    opacity: 1;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 100%;
+    margin-right: 10px;
 }
 
 .checkbox_label {
-    font-family: 'Montserrat' sans-serif;
-    font-size: 14px;
+    @include label();
     line-height: 18px;
-    border-color: #1f2041;
-    opacity: 50%;
-    margin-left: 10px;
 }
