--- a/src/components/form_elements/date_dropdown/calendar.scss
+++ b/src/components/form_elements/date_dropdown/calendar.scss
@@ -23,3 +23,9 @@
 .datepicker--content {
     padding-top: 30px;
 }
+.datepicker--button {
+    color: #BC9CFF;
+    font-family: 'Montserrat Bold' sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+}
