--- a/src/components/cards/checkout/checkout_card.pug
+++ b/src/components/cards/checkout/checkout_card.pug
@@ -7,7 +7,7 @@ container.checkout_card
     .checkout_room_price
       p.checkout_price 9 990₽
       p.time_of_booking в сутки
-  +date_card_form("booking_room")
+  //-+date_card_form("booking_room")
   .checkout_room_cost
     .cost_of_booking_time 
       p.checkout_description 9 990₽ х 4 суток
@@ -21,4 +21,4 @@ container.checkout_card
     .checkout_total_cost 
       p.total_cost Итого
       p.amount_total_cost 38 081₽
-  +button("booking_room")
+  //-+button("booking_room")
