--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -9,6 +9,7 @@ html(lang="en")
             include ../../node_modules/air-datepicker/dist/css/datepicker.min.css
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
         script(src='../../node_modules/air-datepicker/dist/js/datepicker.min.js')
+        script(src="../../dist/scripts.js") 
     body 
         form(action="") 
             include ../components/form_elements/txt_field/txt_field.pug
