add close button to calendar

--- a/src/components/form_elements/date_dropdown/calendar.scss
+++ b/src/components/form_elements/date_dropdown/calendar.scss
@@ -29,3 +29,26 @@
     font-weight: bold;
     font-size: 12px;
 }
+// #datepickers-container .-selected- {
+//     background: #EF984C;
+//     color: #fff !important;
+//  }#datepickers-container .-current- {
+//     color: #EF984C;
+//  }
+//  #datepickers-container .datepicker--time-sliders > *:not(:first-child) {
+//     margin-top: 9px;
+//     margin-bottom: 6px;
+//  }#datepickers-container .datepicker--time-sliders > *:first-child {
+//     margin-top: 6px;
+//  }
+//  #datepickers-container input[type=range]::-webkit-slider-thumb {
+//     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+//     border: 0px;
+//     height: 22px;
+//     width: 22px;
+//     border-radius: 5px;
+//     background: #EF984Cee;
+//     cursor: pointer;
+//     -webkit-appearance: none;
+//     margin-top: -11px;
+//  }
