--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -8,11 +8,13 @@ html(lang="en")
         style 
             include ../asserts/dropdownplugin/numbercategoryselector.css
             include ../../node_modules/air-datepicker/dist/css/datepicker.min.css
+            include ../asserts/checkbox_plugin/css/canecode_switch.css
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
         script(src='../../node_modules/air-datepicker/dist/js/datepicker.min.js')
         script(src="../../dist/scripts.js") 
         script(src="//code.jquery.com/jquery.min.js")
-        script(src="../../asserts/dropdownplugin/numbercategoryselector.js") 
+        script(src="../../asserts/dropdownplugin/numbercategoryselector.js")
+        script(src="../../asserts/chgeckbox_plugin/js/canecode_switch.js")  
     body 
         form(action="") 
             include ../components/form_elements/txt_field/txt_field.pug
@@ -33,5 +35,7 @@ html(lang="en")
             form
                 +radio_button("woman", "Женщина")
                 +radio_button("male", "Мужчина")
+            include ../components/form_elements/toogle/toogle.pug
+            +toogle()
 
 
