--- a/src/components/form_elements/toogle/toogle.pug
+++ b/src/components/form_elements/toogle/toogle.pug
@@ -1,6 +1,5 @@
-mixin toogle
+mixin toogle(label)
    input.toogle(type="checkbox", id="default")
-   label.toogle_label(for="default" data-checked="Checked" data-unchecked="Unchecked") 
-   input.toogle(type="checkbox", id="rounded")
-   label.toogle_label(for="rounded" data-checked="Checked" data-unchecked="Unchecked") 
+   label.toogle_label(for="default")
+   
    
