--- a/src/components/form_elements/toogle/toogle.scss
+++ b/src/components/form_elements/toogle/toogle.scss
@@ -1,78 +1,43 @@
-body {
-    background-color: black;
-}
-.toogle {
-    background-image: linear-gradient(#338f5c, #ffff77)
+.toogle_label {
+    font-family: 'Montserrat' sans-serif;
+    font-size: 12px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
 }
 input[type=checkbox].toogle {
     display: none;
 }
 input[type=checkbox].toogle + label.toogle_label{
     display: inline-block;
-    height: 60px;
-    width: 200px;
+    height: 20px;
+    width: 40px;
     position: relative;
-    font-size: 20px;
-    border: 4px solid white;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
+    border: 1px solid rgba(31, 32, 65, 0.25);
     box-sizing: border-box;
-    transition: all 0.3s ease;
+    border-radius: 30px;
 }
 input[type=checkbox].toogle + label.toogle_label::before{
     position: absolute;
-    top: 4px;
-    height: 44px;
-    width: 44px;
+    top: 3px;
+    height: 12px;
+    width: 12px;
     content: '';
     transition: all 0.3s ease;
-    z-index: 3;
-}
-input[type=checkbox].toogle + label.toogle_label::after{
-    width: 140px;
-    text-align: center;
-    z-index: 2;
-    text-transform: uppercase;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-input[type=checkbox].toogle + label#rounded {
-    border-radius: 30px;
-}
-input[type=checkbox].toogle + label#rounded::before {
     border-radius: 50%;
 }
 input[type=checkbox].toogle:not(:checked) + label{
     background-color: transparent;
-    text-align: right;
-}
-input[type=checkbox].toogle:not(:checked) + label::after {
-    content: attr(data-unchecked);
-    right: 0;
-    left: auto;
-    opacity: 1;
-    color: white;
 }
 input[type=checkbox].toogle:not(:checked) + label::before {
     left: 4px;
-    background-color: #fff;
+    background-color: rgba(31, 32, 65, 0.25);
+
 }
 input[type=checkbox].toogle:checked + label {
-    text-align: left;
-    border-color: #000;
-}
-input[type=checkbox].toogle:checked + label::after{
-    content: attr(data-checked);
-    left: 4px;
-    right: auto;
-    opacity: 1;
-    color:white;
+    border: 1px solid #BC9CFF;
+
 }
 input[type=checkbox].toogle:checked + label::before {
-    left: 144px;
-    background-color: #9b8e1a;
+    left: 23px;
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
