--- a/src/pages/ui.pug
+++ b/src/pages/ui.pug
@@ -37,6 +37,8 @@ html(lang="en")
             +toogle("label")
             include ../components/form_elements/like_button/like_button.pug
             +like_button
+            include ../components/form_elements/rate_button/rate_button.pug
+            +rate_button
 
 
 
