--- a/src/components/form_elements/rate_button/rate_button.pug
+++ b/src/components/form_elements/rate_button/rate_button.pug
@@ -1,5 +1,5 @@
-//- mixin rate_button 
-//-     - var x = 5
-//-         - for (var i=1; i<=x; 1++) {
-//-             img(src=require("/src/components/form_elements/rate_button/img/rate_button_star.svg"), alt="", srcset="")
-//-         -}
+mixin rate_button 
+    .rating_group
+        each item in [1,2,3,4,5]
+            input.rating_input(type="checkbox", id="rating_input"+item, value=item)
+            label.rating_label(for="rating_input"+item) 
