--- a/src/components/headers_footers/authorized_user_header/authorized_user_header.pug
+++ b/src/components/headers_footers/authorized_user_header/authorized_user_header.pug
@@ -2,11 +2,15 @@ header
     .logo 
         img(src=require("/src/asserts/img/Logo.svg"))
     menu
-        - var menuItems = ["О нас", "Услуги", "Вакансии", "Новости", "Соглашения"]
-            each menuItem in menuItems 
-                a.menu_item(href="http://bbro.jj")= menuItem
-        .header_login_button 
-            include ../../form_elements/buttons/buttons
-            +button("ВОЙТИ", "no_bg")
-        .header_sign_button
-            +button("ЗАРЕГИСТРИРОВАТЬСЯ", "no_bg")
+        each menuItem, key in {1: "О нас", 2: "Услуги", 3: "Вакансии", 4: "Новости", 5: "Соглашения"}
+            .header_item
+                a.menu_item(class='menu_item'+key href="http://bbro.jj")= menuItem
+                if key==2 
+                    img.menu_mark(src=require("/src/components/headers_footers/authorized_user_header/img/header_check_mark.svg"), alt="", srcset="")
+                if key==5
+                    img.menu_mark(src=require("/src/components/headers_footers/authorized_user_header/img/header_check_mark.svg"), alt="", srcset="")
+    .header_login_button 
+        include ../../form_elements/buttons/buttons
+        +button("ВОЙТИ", "no_bg")
+    .header_sign_button
+        +button("ЗАРЕГИСТРИРОВАТЬСЯ", "bg")
