--- a/src/components/headers_footers/authorized_user_header/authorized_user_header.scss
+++ b/src/components/headers_footers/authorized_user_header/authorized_user_header.scss
@@ -4,15 +4,22 @@ header {
 }
 .logo {
     padding-left: 140px;
+    margin-top: 15px;
 }
 menu {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    margin-left: 137.5px;
+    margin-left: 284px;
+    margin-top: 24px;
+    margin-bottom: 0;
 }
 .header_login_button , .header_sign_button {
+    display: inline-flex;
     float: right;
+    margin-top: 19px;
+    padding-left: 20px;
+    height: 34px;
 }
 .menu_item {
     text-decoration: none;
@@ -20,9 +27,29 @@ menu {
     font-size: 14px;
     color: rgba(31, 32, 65, 0.5);
     line-height: 17px;
+    margin-top: 32px;
 }
 .menu_item:hover {
     font-family: 'Montserrat' sans-serif;
     font-weight: bold;
     color: rgba(31, 32, 65, 0.75);
+}
+.menu_mark {
+    width: 12px;
+    height: 8px;
+    padding-left: 8px;
+}
+.header_login_button {
+    > button {
+        height: 34px;
+    }
+}
+.header_sign_button {
+    > button {
+        width: 196px;
+        height: 34px;
+        > p {
+            padding-left: 19px;
+        }
+    }
 }
