--- a/src/pages/landing_page/landing_page.pug
+++ b/src/pages/landing_page/landing_page.pug
@@ -6,9 +6,10 @@ html(lang="ru")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         style 
-            include ../../node_modules/air-datepicker/dist/css/datepicker.min.css
+            include ../../../node_modules/air-datepicker/dist/css/datepicker.min.css
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-        script(src='../../node_modules/air-datepicker/dist/js/datepicker.min.js')
+        script(src='../../../node_modules/air-datepicker/dist/js/datepicker.min.js')
     body 
-        include ../components/headers_footers/authorized_user_header/authorized_user_header
-        
+        include ../../components/headers_footers/authorized_user_header/authorized_user_header
+        .landing_page_content
+            
