--- a/src/components/cards/checkout/checkout_card.scss
+++ b/src/components/cards/checkout/checkout_card.scss
@@ -11,6 +11,12 @@
 .checkout_card {
     width: 380px;
     height: 511px;
+    margin-top: 10px;
+}
+.checkout_card_items {
+    padding: 31px 30px 30px 31px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
     > .dropdown_label_input {
         padding-top: 19px;
         padding-bottom: 20px;
