--- a/src/components/cards/date/date_card.scss
+++ b/src/components/cards/date/date_card.scss
@@ -10,6 +10,12 @@
 .date_card {
     width: 380px;
     height: 374px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    > .date_card_items {
+        padding: 43px 30px 30px 30px;
+        height: 305px;
+        width: 320px;
     > .date_card_txt {
         padding-bottom: 21px;
         >p {
@@ -19,13 +25,15 @@
             margin: 0;
         } 
     }
-    > .date_card_button {
+}
+}
+.date_card_button {
         padding-top: 33px;
     }
-    > .dropdown_label_input  {
+.dropdown_label_input  {
         padding-top: 22px;
     }
-}
+
 .date_card_form {
     padding-top: 21px;
 }
