--- a/src/components/cards/login/login_card.scss
+++ b/src/components/cards/login/login_card.scss
@@ -8,21 +8,24 @@
 .login_card {
     width: 380px;
     height: 358px;
+    margin-top: 50px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    > .login_card_items{
+        min-height: 286px;
+        min-width: 319px;
+        padding: 40px 30px 20px 31px;
     > p {
         @include form_style();
-        padding-left: 31px;
-
+        margin-top: 0;
     }
-    > form {
-        padding-left: 31px;
-    }
+}
 }
 .login_button {
     padding-top: 20px;
 }
 .login_card_registration {
     display: inline-flex;
-    padding-left: 31px;
     padding-top: 30px;
     > p {
         font-family: 'Montserrat' sans-serif;
