--- a/src/components/form_elements/toogle/toogle.pug
+++ b/src/components/form_elements/toogle/toogle.pug
@@ -1,5 +1,5 @@
 mixin toogle(label)
    input.toogle(type="checkbox", id="default")
-   label.toogle_label(for="default")
+   label.toogle_label(for="default")=label
    
    
