--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -13,4 +13,6 @@ html(lang="ru")
         include ../components/cards/date/date_card
         include ../components/cards/checkout/checkout_card
         include ../components/cards/login/login_card
+        include ../components/cards/registration/registration_card
+
 
